# SDR_OS

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.host-net.yml  docker-compose.yml  gps_sensor.py  iio_telemetry_publisher.py  justfile  main.py  mkdocs.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  read_iio_values.py  requirements.txt  server.js  start_robot_telemetry.sh  webcam_publisher.py  webpack.config.js
.claude/commands/: env-docs.md
.claude/skills/: phase-completion-docs.md
.devcontainer/cuda/: devcontainer.json
.devcontainer/mlx/: devcontainer.json
.devcontainer/rocm/: devcontainer.json
.github/: RUNNERS.md
_archive/: gps.py  package-lock.json  package.xml  read_iio_values_v2.py  sensors.py  setup.py  setup.sh
client/: simple.html
configs/: Caddyfile  nats.conf  prometheus.yml
docs/: architecture.md  backend.md  build.md  ci.md  containers.md  dev-workflow.md  frontend.md  github-actions.md  index.md  nats-subjects.md  phase1-summary.md  runner.md  setup.md  testing.md
documents/: ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_REASONING.md  CI_PLAN.md  HARDWARE_ARCHITECTURE.md  NEW_ARCHITECTURE_OVERVIEW.md  SETUP.md  TECH_SPEC.md
requirements/: requirements-base.txt  requirements-cuda.txt  requirements-docs.txt  requirements-mlx-cpu.txt  requirements-mlx-cuda12.txt  requirements-mlx-cuda13.txt  requirements-mlx.txt  requirements-rocm.txt
scripts/: docker-build-progress.sh  genesis_sim_runner.py  validate_nvenc.py  verify.sh
services/transport-server/: Cargo.toml  Dockerfile
services/transport-server/src/: config.rs  health.rs  main.rs
services/transport-server/src/fanout/: backpressure.rs  broadcast.rs  mod.rs
services/transport-server/src/nats/: publisher.rs  subscriber.rs
services/transport-server/src/shm/: mod.rs  protocol.rs  reader.rs
services/transport-server/src/transport/: websocket.rs
src/: main.py
(+418 files in other folders)
