[project]
name = "sdr-os"
version = "0.1.0"
description = "SDR OS - Robotics simulation and control platform"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "genesis-forge>=0.3.0",
    "genesis-world>=0.3.13",
    "torch>=2.8.0",
]

[dependency-groups]
dev = []
cuda = []
rocm = [
    "mlx[cpu]",
]
mlx = [
    "mlx",
]
mlx_cpu = [
    "mlx[cpu]",
]
mlx_cuda12 = [
    "mlx[cuda12]",
]
mlx_cuda13 = [
    "mlx[cuda13]",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-git-revision-date-localized-plugin",
    "mike",
    "pymdown-extensions",
]
